<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.edu.utn.frba.myapplication.picture.SelectPictureActivity">

    <ImageView
        android:id="@+id/selectedImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image"
        app:layout_constraintBottom_toTopOf="@+id/cameraButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/galleryButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/galleryButton"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/photo_gallery"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/cameraButton"
        app:layout_constraintBottom_toTopOf="@+id/urlButton"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="4dp"
        tools:layout_editor_absoluteY="399dp" />

    <Button
        android:id="@+id/urlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_url"
        android:layout_marginRight="7dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/urlEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:inputType="textUri"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/urlButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/urlButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/selectedImageView"
        app:layout_constraintLeft_toLeftOf="@id/selectedImageView"
        app:layout_constraintRight_toRightOf="@id/selectedImageView"
        app:layout_constraintTop_toTopOf="@id/selectedImageView"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="177dp" />

</android.support.constraint.ConstraintLayout>
